添加删除数据库配置功能
